; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/netronome/nfp/bpf/extr_jit.c_ur_load_imm_any.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/netronome/nfp/bpf/extr_jit.c_ur_load_imm_any.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfp_prog = type { i32 }

@UR_REG_IMM_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nfp_prog*, i32, i32)* @ur_load_imm_any to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ur_load_imm_any(%struct.nfp_prog* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.nfp_prog*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.nfp_prog* %0, %struct.nfp_prog** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* @UR_REG_IMM_MAX, align 4
  %9 = load i32, i32* %6, align 4
  %10 = call i64 @FIELD_FIT(i32 %8, i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %3
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @reg_imm(i32 %13)
  store i32 %14, i32* %4, align 4
  br label %21

15:                                               ; preds = %3
  %16 = load %struct.nfp_prog*, %struct.nfp_prog** %5, align 8
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @wrp_immed(%struct.nfp_prog* %16, i32 %17, i32 %18)
  %20 = load i32, i32* %7, align 4
  store i32 %20, i32* %4, align 4
  br label %21

21:                                               ; preds = %15, %12
  %22 = load i32, i32* %4, align 4
  ret i32 %22
}

declare dso_local i64 @FIELD_FIT(i32, i32) #1

declare dso_local i32 @reg_imm(i32) #1

declare dso_local i32 @wrp_immed(%struct.nfp_prog*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
